<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen android:title="@string/settings_options">
			<CheckBoxPreference
				android:key="auto_on"
				android:title="@string/settings_auto_on"
				android:summary="@string/settings_auto_on2" />
			<CheckBoxPreference
				android:key="auto_ondemand"
				android:title="@string/settings_auto_ondemand"
				android:summary="@string/settings_auto_ondemand2" />
			<CheckBoxPreference
				android:key="auto_headset"
				android:title="@string/settings_auto_headset"
				android:summary="@string/settings_auto_headset2" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_notifications">
			<CheckBoxPreference
				android:key="MWI_enabled"
				android:title="@string/settings_MWI"
				android:summary="@string/settings_MWI2" />
			<CheckBoxPreference
				android:key="notify"
				android:title="@string/settings_notify"
				android:summary="@string/settings_notify2" />
			<CheckBoxPreference
				android:key="nodata"
				android:title="@string/settings_nodata"
				android:summary="@string/settings_nodata2" />
			<com.sipgate.sipua.ui.SipRingtonePreference
				android:key="sipringtone"
				android:title="@string/settings_sipringtone"
				android:summary="@string/settings_sipringtone2"
				android:dialogTitle="@string/settings_sipringtone_dialog"
				android:persistent="false"
				android:ringtoneType="ringtone" /> 
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_av_options">
			<ListPreference
				android:key="eargain"
				android:title="@string/settings_eargain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_eargain" />
			<ListPreference
				android:key="micgain"
				android:title="@string/settings_micgain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_micgain" />
			<ListPreference
				android:key="heargain"
				android:title="@string/settings_heargain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_heargain" />
			<ListPreference
				android:key="hmicgain"
				android:title="@string/settings_hmicgain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="1.0"
				android:dialogTitle="@string/settings_hmicgain" />
	</PreferenceScreen>
</PreferenceScreen>
